<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="10dp"
    tools:context=".ItemDetailFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/txtPDTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="Organic Broccoli"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RatingBar
            android:id="@+id/myRatingBar"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:focusable="true"
            android:isIndicator="true"
            android:numStars="5" />


        <TextView
            android:id="@+id/txtPDDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtPDTitle"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/txtItemDesc"
            android:textSize="14sp" />


        <ImageView
            android:id="@+id/imgPDImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@+id/txtPDDescription"
            android:padding="5dp"
            android:src="@drawable/broccoli" />

        <TextView
            android:id="@+id/txtPDPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgPDImage"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="$9"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_below="@+id/imgPDImage"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnPAddToCart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Add To Cart"/>


        </LinearLayout>


        <TextView
            android:id="@+id/txtPDItemDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtPDPrice"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/txtPDItemDetails"
            android:textSize="16sp"
            android:textStyle="bold" />


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cdSpecifications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtPDItemDetails"
            android:layout_marginTop="15dp"
            app:cardBackgroundColor="#ffffff"
            app:cardCornerRadius="@dimen/cardview_default_radius">


            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp"
                android:shrinkColumns="*"
                android:stretchColumns="*">


                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/txtPDName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Product Name" />

                    <TextView
                        android:id="@+id/txtPDName1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Organic Broccoli" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/txtPDFrom"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="From" />

                    <TextView
                        android:id="@+id/txtPDFrom1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Mexico" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/txtPDProDescription"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Product Description" />

                    <TextView
                        android:id="@+id/txtPDDescription1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txtPDDescription" />

                </TableRow>


            </TableLayout>

        </com.google.android.material.card.MaterialCardView>


        <TextView
            android:id="@+id/txtPUserReviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cdSpecifications"
            android:layout_marginTop="10dp"
            android:text="@string/user_reviews"
            android:textSize="16sp"
            android:textStyle="bold" />


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/txtUserReviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtPUserReviews"
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            app:cardBackgroundColor="#ffffff"
            app:cardCornerRadius="@dimen/cardview_default_radius">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">


                <TextView
                    android:id="@+id/txtUserName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="Harika"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <RatingBar
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="10dp"
                    android:isIndicator="false"
                    android:numStars="5" />

                <TextView
                    android:id="@+id/txtUserId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtUserName"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/txtUserId"
                    android:textSize="16sp" />


                <TextView
                    android:id="@+id/txtUserReviewDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtUserId"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/txtUserReviewDesc"
                    android:textSize="14sp" />


            </RelativeLayout>


        </com.google.android.material.card.MaterialCardView>

    </RelativeLayout>
</LinearLayout>

